--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,12 @@
 output: github_document
 ---
 
+[![Build Status](https://travis-ci.org/n8thangreen/QALY.svg?branch=master)](https://travis-ci.org/n8thangreen/CEdecisiontree)
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/n8thangreen/QALY?branch=master&svg=true)](https://ci.appveyor.com/project/n8thangreen/CEdecisiontree)
+[![Coverage status](https://codecov.io/gh/n8thangreen/QALY/branch/master/graph/badge.svg)](https://codecov.io/github/n8thangreen/CEdecisiontree?branch=master)
+[![experimental](http://badges.github.io/stability-badges/dist/experimental.svg)](http://github.com/badges/stability-badges)
+
+
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r setup, include = FALSE}
@@ -9,18 +15,55 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "100%",
+  tidy = FALSE,
+  error = FALSE,
+  fig.width = 5,
+  fig.height = 5
 )
 ```
 # CEdecisiontree
 
-The goal of CEdecisiontree is to ...
+An R package for lightweight cost-effectiveness analysis using decision trees.
 
-## Example
+Currently contains functions to:
 
-This is a basic example which shows you how to solve a common problem:
+- matrix (wide, sparse) representation
 
-```{r example}
-## basic example code
+## To do
+Request welcome; please use [Issues](https://github.com/n8thangreen/CEdecisiontree/issues)
+
+- fully integrate src
+
+
+## Installing CEdecisiontree
+
+To install the development version from github:
+```{r eval=FALSE}
+library(devtools)
+install_github("n8thangreen/CEdecisiontree")
 ```
 
+Then, to load the package, use:
+```{r eval=FALSE}
+library(CEdecisiontree)
+```
+
+
+## Motivation
+xxx
+
+
+## Basic example
+
+```{r}
+suppressMessages(library(CEdecisiontree))
+```
+
+
+
+See package [vignette](http://htmlpreview.github.io/?https://github.com/n8thangreen/CEdecisiontree/blob/master/inst/doc/vignette_main.html) for more details and examples.
+
+## License
+
+GPL-3 © 
