fix README typo

--- a/README.Rmd
+++ b/README.Rmd
@@ -145,7 +145,8 @@ Here we assume node labelling order from root such that terminal nodes are last.
 
 ```{r}
 n_from_nodes <- nrow(probs)
-terminal_states <- (n_from_nodes + 1):n_from_nodes
+n_to_nodes <- ncol(probs)
+terminal_states <- (n_from_nodes + 1):n_to_nodes
 
 p_terminal_state <-
   branch_joint_probs(probs)[ ,terminal_states] %>%
