--- a/README.Rmd
+++ b/README.Rmd
@@ -88,6 +88,15 @@ cost
 probs
 ```
 
+`probs` is a probability transition matrix.
+This is like `pmatrix.msm` in the `msm` package, or `define_transition` in the `heemod` package.
+The `transMat()` function in the `mstate` package creates a closely related multi-state model transition matrix. Copying this, we can do
+
+```{r}
+CEdecisiontree:::trans_binarytree(depth = 3)
+```
+
+
 The expected value at each node is calculate as follows.
 ```{r}
 dectree_expected_values(vals = cost,
@@ -156,7 +165,80 @@ p_terminal_state
 sum(p_terminal_state)
 ```
 
+## Comparison with `heemod` 
 
+```{r}
+library(heemod)
+
+mat_base <- define_transition(
+  state_names = as.character(1:8),
+  0, 0.2, 0.8,0,0,0,0,0, 
+  0,0,0, 0.2, 0.8,0,0,0,  
+  0,0,0,0,0, 0.2, 0.8,0,
+  0,0,0,0,0,0,0,1,
+  0,0,0,0,0,0,0,1,
+  0,0,0,0,0,0,0,1,
+  0,0,0,0,0,0,0,1,
+  0,0,0,0,0,0,0,1
+)
+```
+
+
+Define cost at each node:
+```{r}
+state_1 <- define_state(
+  cost_total = 0,
+  qaly = 0)
+
+state_2 <- define_state(
+  cost_total = 10,
+  qaly = 1)
+
+state_3 <- define_state(
+  cost_total = 1,
+  qaly = 1)
+
+state_4 <- define_state(
+  cost_total = 10,
+  qaly = 1)
+
+state_5 <- define_state(
+  cost_total = 1,
+  qaly = 1)
+
+state_6 <- define_state(
+  cost_total = 10,
+  qaly = 1)
+
+state_7 <- define_state(
+  cost_total = 1,
+  qaly = 1)
+
+state_8 <- define_state(
+  cost_total = 0,
+  qaly = 0)
+
+strat_base <- define_strategy(
+  transition = mat_base,
+  "1" = state_1,
+  "2" = state_2,
+  "3" = state_3,
+  "4" = state_4,
+  "5" = state_5,
+  "6" = state_6,
+  "7" = state_7,
+  "8" = state_8
+)
+```
+
+Finally, we get the expected cost 
+```{r}
+run_model(
+  strat_base,
+  cycles = 100,
+  cost = cost_total,
+  effect = qaly)
+```
 
 
 See package [vignette](http://htmlpreview.github.io/?https://github.com/n8thangreen/CEdecisiontree/blob/master/inst/doc/vignette_main.html) for more details and examples.
