--- a/vignettes/Using_function_dispatch.Rmd
+++ b/vignettes/Using_function_dispatch.Rmd
@@ -16,12 +16,24 @@ knitr::opts_chunk$set(
 )
 ```
 
+## Introduction
 
+So far, we have passed particular data formats to `dectree_expected_values`, where we need to be explicit about which arguments they are associated with.
+Alternatively, we can define the model upfront and then pass this object to `dectree_expected_values` for it to dispatch to the appropriate function using S3.
+
+## Example
+
+```{r}
+suppressPackageStartupMessages(library(CEdecisiontree))
+suppressPackageStartupMessages(library(dplyr))
+```
+
+Let us create 3 input variables, in line with the 3 formats we have met already, using the `define_model` function.
 ```{r}
 model_transmat <- 
   define_model(transmat =
-                 list(probs = matrix(data=c(NA, 0.5, 0.5), nrow = 1),
-                      cost = matrix(data=c(NA, 1, 2), nrow = 1)
+                 list(prob = matrix(data = c(NA, 0.5, 0.5), nrow = 1),
+                      vals = matrix(data = c(NA, 1, 2), nrow = 1)
                  ))
 model_transmat
 
@@ -31,20 +43,20 @@ model_tree <-
                                    "2" = NULL,
                                    "3" = NULL),
                       dat = data.frame(node = 1:3,
-                                       probs = c(NA, 0.5, 0.5),
-                                       cost = c(NA, 1, 2))
+                                       prob = c(NA, 0.5, 0.5),
+                                       vals = c(0, 1, 2))
                  ))
 model_tree
 
 model_long <- 
-  define_model(dat_long = data.frame(from = c(NA, 1, 1),
-                                     to = 1:3,
-                                     probs = c(NA, 0.5, 0.5),
-                                     cost = c(NA, 1, 2)))
+  define_model(dat_long = data.frame(from = c(1, 1),
+                                     to = c(2, 3),
+                                     prob = c(0.5, 0.5),
+                                     vals = c(1, 2)))
 model_long
 ```
 
-
+Now it is simply a case of passing this to main function call.
 ```{r}
 dectree_expected_values(model_transmat)
 dectree_expected_values(model_tree)
