--- a/vignettes/comparison-with-other-packages.Rmd
+++ b/vignettes/comparison-with-other-packages.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 ## Comparison with heemod 
 
 The heemod package is designed to simulate more general models but let us perform the same analysis to compare.
-First, we need to define the transition matrix. This is essentially the same as above except because heemod simulates over a predefined number of iterations or `cycles` we need to add a final absorbing sink state with no associated costs.
+First, we need to define the transition matrix. This is essentially the same as above except because heemod simulates over a predefined number of iterations or _cycles_ we need to add a final absorbing sink state (i.e. $p_{ii} = 1$) with no associated costs.
 ```{r}
 suppressPackageStartupMessages(library(heemod))
 
@@ -84,7 +84,7 @@ strat_base <- define_strategy(
 )
 ```
 
-Finally, we get the expected cost 
+Finally, we get the expected cost £5600 for 100 cycles which is equivalent to £5.6 in our previous analysis.
 ```{r}
 run_model(
   strat_base,
