--- a/vignettes/scenario-sensitivity-analysis.Rmd
+++ b/vignettes/scenario-sensitivity-analysis.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 
 Deterministic or scenario sensitivity analysis is a common part of any cost-effectiveness analysis [@Briggs2012].
 Here we will carry this out for a simple decision tree.
-This involves explicity specifying values for each branch probability and cost and calculating the total expected value for each set.
+This involves explicity specifying values for particular branch probability and/or values and calculating the total expected value.
 
 ## Example
 
@@ -35,10 +35,9 @@ suppressPackageStartupMessages(library(tidyverse, quietly = TRUE))
 suppressPackageStartupMessages(library(purrr, quietly = TRUE))
 ```
 
-We first define the decision tree.
 We create a complete design meaning all combinations on the grid of input values.
-We may alternatively only want to do a one-way analysis and so would set the non-varied term to some baseline distribution or fixed value.
-We can think of this as a worst-, most likely and best-case scenario.
+Alternatively, we may only want to do a one-way analysis and so would set the non-varied term to some common baseline distribution or fixed value.
+In our example, we will choose three values for each parameter. We can think of this as a worst-, most likely and best-case scenario.
 
 ```{r}
 p <- c(NA_real_, 0.4, 0.6)
@@ -56,13 +55,15 @@ c_grid <-
 c_grid
 ```
 
+Then define the decision tree structure.
+
 ```{r}
 child <- list("1" = c(2, 3),
               "2" = NULL,
               "3" = NULL)
 ```
 
-We can now loop over the inputs and generate a tree object for each cost combination.
+We can now loop over the inputs and generate a complete tree object for each cost combination.
 
 ```{r warning=FALSE}
 tree_dat_sa <- list()
@@ -76,7 +77,7 @@ for (i in seq_along(c_grid)) {
              dat = data.frame(
                node = names(child),
                prob = p,
-               vals = c_grid[, i])
+               vals = c_grid[[i]])
         ))
 }
 ```
@@ -86,7 +87,7 @@ This results in a list of trees.
 str(tree_dat_sa, 1)
 ```
 
-Now it is straightforward to map over each of these trees to obtain the total expected values
+Now it is straightforward to map over each of these trees to obtain the total expected values.
 
 ```{r}
 res <- map_dbl(tree_dat_sa, dectree_expected_values)
@@ -94,3 +95,27 @@ res
 ```
 
 ### Tornado plot
+
+Lets create a tornado plot showing a one-way sensitivity analysis.
+We'll use my `plotCostEffectiveness` package to easily produce a ggplot version.
+By sepcifying the output data as a model frame it is handled appropriately.
+
+```{r}
+suppressPackageStartupMessages(library(plotCostEffectiveness))
+suppressPackageStartupMessages(library(magrittr))
+suppressPackageStartupMessages(library(reshape2))
+suppressPackageStartupMessages(library(plyr))
+suppressPackageStartupMessages(library(purrr))
+suppressPackageStartupMessages(library(dplyr))
+suppressPackageStartupMessages(library(ggplot2))
+
+sa_dat <- as.data.frame(cbind(t(c_grid), res))
+
+sa_model_dat <- model.frame(formula = res ~ c1 + c2 + c3,
+                            data = sa_dat)
+
+sa_model_dat %>%
+  s_analysis_to_tornado_plot_data %>%
+  ggplot_tornado() 
+```
+
