--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,8 @@
 ---
 output:
   github_document:
-    pandoc_args: --webtex
+    pandoc_args: --webtex=https://ibm.codecogs.com/png.latex?
+always_allow_html: yes
 ---
 
 # CEdecisiontree <img src="imgfile.png" height="139" align="right"/>
@@ -63,27 +64,23 @@ Clearly, there are no $p_{ij}$ or $c_j$ in this case but for computational purpo
 
 The expected value at each node $i \in S$ is calculated by 'folding back' using the recursive formula
 
-$$
-\hat{c}_i = c_i + \sum_{j \in child(i)} p_{ij} \hat{c}_j
-$$
+$$\hat{c}_i = c_i + \sum_{j \in child(i)} p_{ij} \hat{c}_j$$
 
 with boundary values at the terminal nodes
 
-$$
-\hat{c}_i = c_i \mbox{ for } i = \{ S: child(s) = \emptyset \}.
-$$
+$$\hat{c}_i = c_i \mbox{ for } i = \{ S: child(s) = \emptyset \}.$$
 
 
 ## Basic example
 
 Quietly load libraries.
 ```{r message=FALSE, warning=FALSE}
-suppressPackageStartupMessages(library(CEdecisiontree))
-suppressPackageStartupMessages(library(readr))
-suppressPackageStartupMessages(library(dplyr))
-suppressPackageStartupMessages(library(reshape2))
-suppressPackageStartupMessages(library(tidyr))
-suppressPackageStartupMessages(library(assertthat))
+library(CEdecisiontree)
+library(readr)
+library(dplyr)
+library(reshape2)
+library(tidyr)
+library(assertthat)
 ```
 
 We will consider a simple 7 node binary tree.
@@ -96,9 +93,7 @@ knitr::include_graphics("https://raw.githubusercontent.com/Health-Economics-in-R
 ```
 
 So if we were to write out the expected cost in full this would give
-$$
-p_{12}(c_{12} + p_{24}c_{24} + p_{25}c_{25}) + p_{13}(c_{13} + p_{36}c_{36} + p_{37}c_{37}) 
-$$
+$$p_{12}(c_{12} + p_{24}c_{24} + p_{25}c_{25}) + p_{13}(c_{13} + p_{36}c_{36} + p_{37}c_{37})$$
 
 Load example data from the package. 
 ```{r}
