--- a/vignettes/other-input-formats.Rmd
+++ b/vignettes/other-input-formats.Rmd
@@ -4,7 +4,7 @@ author: "Nathan Green"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Using other input formats}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
